@@ -2,6 +2,7 @@
 x.x:
 - added: custom subject for group discussion replies
 - fixed: blog notification not handled as of Elgg 1.8.14
+- fixed: using new cache functions
 
 1.1.1 (2013-04-05):
 
